# caffe-android-opencl-fp16

./: ._16.txt  ._32.txt  ._README.md  ._tmp  .gitignore  CMakeLists.txt  README.md  clean.sh  tmp
src/caffe/: CMakeLists.txt  blob.cpp  common.cpp  data_transformer.cpp  layer.cpp  net.cpp  syncedmem.cpp
src/caffe/layers/: ._batch_sum_multiplier_.cpu_data() is  absval_layer.cpp  accuracy_layer.cpp  base_conv_layer.cpp  base_data_layer.cpp  batch_norm_layer.cpp  batch_reindex_layer.cpp  batch_sum_multiplier_.cpu_data() is  bias_layer.cpp  bnll_layer.cpp  concat_layer.cpp  conv_layer.cpp  crop_layer.cpp  deconv_layer.cpp  dropout_layer.cpp  eltwise_layer.cpp  elu_layer.cpp  embed_layer.cpp  euclidean_loss_layer.cpp  exp_layer.cpp  filter_layer.cpp  flatten_layer.cpp  im2col_layer.cpp  inner_product_layer.cpp  log_layer.cpp  lrn_layer.cpp  mvn_layer.cpp  pooling_layer.cpp  power_layer.cpp  prelu_layer.cpp  recurrent_layer.cpp  reduction_layer.cpp  relu_layer.cpp  scale_layer.cpp  sigmoid_layer.cpp  silence_layer.cpp  slice_layer.cpp  softmax_layer.cpp  softmax_loss_layer.cpp  split_layer.cpp  (+3 more)
src/caffe/opencl/: ._backup.cl  ._conv.cl  backup.cl  conv.cl  kernel_code.cl
src/caffe/proto/: caffe.proto
src/caffe/test/: CMakeLists.txt  test_batch_norm_layer.cpp  test_batch_reindex_layer.cpp  test_bias_layer.cpp  test_caffe_main.cpp  test_common.cpp  test_concat_layer.cpp  test_convolution_layer.cpp  test_crop_layer.cpp  test_deconvolution_layer.cpp  test_eltwise_layer.cpp  test_embed_layer.cpp  test_filter_layer.cpp  test_flatten_layer.cpp  test_im2col_layer.cpp  (+26 more)
(+107 files in other folders)
